# Copyright (c) Facebook, Inc. and its affiliates.
# 
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.

[package]
name = "dachshund"
version = "0.1.0"
edition = "2018"

authors = [
  "Alex Peysakhovich <alexpeys@fb.com>",
  "Bogdan State <bogdanstate@fb.com>",
  "Julian Mestre <julianmestre@fb.com>",
  "Matthew Menard <mlmenard@fb.com>",
  "Michael Chen <mvc@fb.com>",
  "P\u00E4r Winzell <zell@fb.com>",
]

[features]
map_first_last = []

[lib]
name = "lib_dachshund"
path = "src/lib.rs"

[dependencies.thiserror]
version = "^1.0"

[dependencies.clap]
version = "^2.33"

[dependencies.rand]
version = "^0.6"

[dependencies.rustc-serialize]
version = "^0.3"

[dependencies.serde_json]
version = "^1.0"

[dependencies.nalgebra]
version = "0.21.1"

[dependencies.rayon]
version = "1.3.1"

[dependencies.crossbeam]
version = "0.7.3"

[[bin]]
name = "clique_miner"
path = "src/main.rs"
