# Copyright (c) Facebook, Inc. and its affiliates.
#
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.

[package]
name = "dachshund"
description = "Dachshund is a graph mining library written in Rust. It provides high performance data structures for multiple kinds of graphs, from simple undirected graphs to typed hypergraphs. Dachshund also provides algorithms for common tasks for graph mining and analysis, ranging from shortest paths to graph spectral analysis."
version = "0.1.6"
edition = "2018"
repository = "https://github.com/facebookresearch/dachshund"
license = "MIT"
keywords = ["graph", "network"]

authors = [
  "Alex Peysakhovich <alexpeys@fb.com>",
  "Bogdan State <bogdanstate@fb.com>",
  "Julian Mestre <julianmestre@fb.com>",
  "Matthew Menard <mlmenard@fb.com>",
  "Michael Chen <mvc@fb.com>",
  "P\u00E4r Winzell <zell@fb.com>",
]

[features]
map_first_last = []
rustfmt = []
cargo-fmt = []

[lib]
name = "lib_dachshund"
path = "src/lib.rs"

[dependencies.thiserror]
version = "^1.0"

[dependencies.clap]
version = "^2.33"

[dependencies.rand]
version = "^0.6"

[dependencies.rustc-serialize]
version = "^0.3"

[dependencies.serde_json]
version = "^1.0"

[dependencies.nalgebra]
version = "0.21.1"

[dependencies.rayon]
version = "1.3.1"

[dependencies.crossbeam]
version = "0.7.3"

[dependencies.ordered-float]
version = "2.0.0"

[dependencies.fxhash]
version = "0.2.1"

[dependencies.itertools]
version = "0.9.0"

[dependencies.priority-queue]
version =  "1.1.0"

[dependencies.roaring]
version = "0.9.0"

[[bin]]
name = "clique_miner"
path = "src/clique_miner.rs"

[[bin]]
name = "simple_graph_featurizer"
path = "src/simple_graph_featurizer.rs"

[[bin]]
name = "core_miner"
path = "src/core_miner.rs"

[[bin]]
name = "connected_component_extractor"
path = "src/connected_component_extractor.rs"
